# night-curator

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
night_curator/: .gitignore  AGENTS.md  README.md  codex-automation-prompt.md  codex_runner.py  config.py  daily.py  museum_catalog.json  museums.json  onboarding.py  schedule.py  setup.py  vintage-template.html
tests/: test_codex_runner.py  test_config.py  test_daily_codex.py  test_daily_config.py  test_dynamic_museum.py  test_museum_catalog.py  test_onboarding.py  test_schedule.py  test_setup_cli.py
