[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "night-curator"
version = "0.1.0"
description = "A nightly museum adventure agent that generates cinematic educational comics and pushes them to Lark/Feishu."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Night Curator Contributors"}]
dependencies = ["openai>=1.0.0"]

[project.scripts]
night-curator-setup = "night_curator.setup:main"
night-curator-daily = "night_curator.daily:main"
night-curator-onboarding = "night_curator.onboarding:main"

[tool.setuptools]
packages = ["night_curator"]

[tool.setuptools.package-data]
night_curator = ["museums.json", "vintage-template.html"]
